--- a/src/template/home_page.html
+++ b/src/template/home_page.html
@@ -8,12 +8,13 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         
-        <title>Hello, world!</title>
+        <title>Cool Store</title>
         
     </head>
     <body>
         <div class='text-center'>
-            <h1>Hello, world!</h1>
+            <h1>{{ title }}</h1>
+            <h1>{{ content }}</h1>
         </div>
 
         <!-- Optional JavaScript -->
